[DONE] Create Student Feature

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,19 +5,14 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
-  "rules": {
-    "no-unused-vars": "error",
-    "no-unused-expressions": "error",
-    "prefer-const": "error",
-    "no-console": "warn",
-    "no-undef": "error"
-  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
+
   "env": {
     "browser": true,
     "es2021": true
-  },
-  "globals": {
-    "process": "readonly"
   }
 }
